# simple-graphics-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: component.hpp  engine.hpp  node.hpp  system.hpp
includes/components/: camera.hpp  mover.hpp  transform.hpp
includes/components/renderer/: renderable.hpp  renderer.hpp
includes/components/renderer/renderables/: line.hpp
includes/models/: position.hpp
includes/systems/: null_renderer.hpp
includes/systems/renderers/: render_fragment.hpp
includes/systems/renderers/text_renderer/: text_display.hpp  text_render_fragment.hpp  text_renderer.hpp
includes/systems/renderers/text_renderer/displays/: console_display.hpp
includes/systems/text_renderer/: text_renderer.hpp  text_screen.cpp  text_screen.hpp
includes/systems/text_renderer/displays/: console_display.hpp  console_text_display.hpp
includes/systems/text_renderer/screens/: console_text_screen.hpp
libs/glm/: CMakeLists.txt  manual.md
libs/glm/doc/api/: a00027_source.html  a00109.html  a00120.html  a00142.html  a00142_source.html  a00158.html  a00158_source.html  a00159.html  a00159_source.html  a00243.html  a00245.html  a00247.html  a00280.html  a00287.html  a00296.html  a00298.html  a00362.html  a00372.html  dir_f35778ec600a1b9bbc4524e62e226aa2.html  files.html  modules.html
src/: engine.cpp  main.cpp  node.cpp
src/components/: camera.cpp  mover.cpp
src/components/renderer/: renderer.cpp
src/components/renderer/renderables/: line.cpp
src/systems/renderers/text_renderer/: text_renderer.cpp
src/systems/renderers/text_renderer/displays/: console_display.cpp
src/systems/text_renderer/: text_renderer.cpp
src/systems/text_renderer/displays/: console_display.cpp  console_text_display.cpp
src/systems/text_renderer/screens/: console_text_screen.cpp
